--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -4,8 +4,34 @@
   min-height: 200px;
   min-width: 300px;
   padding: 2rem;
+  text-align: center;
+}
+
+label {
+  font-size: $font-size * 1.3;
+}
+
+input {
+  width: 100%;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+#credits-column {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  float: left;
+}
+
+#grade-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
