--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -1,7 +1,7 @@
 @import 'common.scss';
 
 .container {
-  min-height: 200px;
+  min-height: 250px;
   min-width: 300px;
   padding: 2rem;
   text-align: center;
@@ -9,6 +9,14 @@
 
 label {
   font-size: $font-size * 1.3;
+  margin-bottom: 0.3em;
+}
+
+#gpa-label {
+  position: absolute;
+  top: 13em;
+  left: 0;
+  width: 100%;
 }
 
 input {
@@ -27,6 +35,7 @@ input::-webkit-inner-spin-button {
   justify-content: center;
   align-items: center;
   float: left;
+  width: 50%;
 }
 
 #grade-column {
@@ -34,4 +43,42 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+#calculate-btn {
+  --green: #1BFD9C;
+  font-size: 12px;
+  padding: 0.7em 2.7em;
+  letter-spacing: 0.06em;
+  position: relative;
+  top: 1em;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 0.3s;
+  line-height: 1.4em;
+  border: 2px solid var(--green);
+  background: linear-gradient(to right, rgba(27, 253, 156, 0.1) 1%, transparent 40%,transparent 60% , rgba(27, 253, 156, 0.1) 100%);
+  color: var(--green);
+  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4), 0 0 9px 3px rgba(27, 253, 156, 0.1);
+}
+
+#calculate-btn:hover {
+  color: #82ffc9;
+  cursor: pointer;
+  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.6), 0 0 9px 3px rgba(27, 253, 156, 0.2);
+}
+
+#calculate-btn:before {
+  content: "";
+  position: absolute;
+  left: -4em;
+  width: 4em;
+  height: 100%;
+  top: 0;
+  transition: transform .4s ease-in-out;
+  background: linear-gradient(to right, transparent 1%, rgba(27, 253, 156, 0.1) 40%,rgba(27, 253, 156, 0.1) 60% , transparent 100%);
+}
+
+#calculate-btn:hover:before {
+  transform: translateX(15em);
 }
