--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -12,11 +12,17 @@ label {
   margin-bottom: 0.3em;
 }
 
-#gpa-label {
+.label-div {
   position: absolute;
-  top: 13em;
+  top: 17em;
   left: 0;
   width: 100%;
+}
+
+#gpa-label {
+  border-radius: 50%;
+  padding: 2%;
+  text-align: center;
 }
 
 input {
