Added msu logo at top of ui

--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -7,6 +7,18 @@
   text-align: center;
 }
 
+.logo {
+  position: absolute;
+  width: 10%;
+  top: 0.7em;
+  left: 10em;
+  transition-duration: 0.4s;
+}
+
+.logo:hover {
+  transform: scale(1.1);
+}
+
 label {
   font-size: $font-size * 1.3;
   margin-bottom: 0.3em;
