--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -97,7 +97,7 @@ input::-webkit-inner-spin-button {
   background: linear-gradient(to right, transparent 1%, rgba(27, 253, 156, 0.1) 40%,rgba(27, 253, 156, 0.1) 60% , transparent 100%);
 }
 
-#calculate-btn:hover:before{
+#calculate-btn:hover:before {
   transform: translateX(15em);
 }
 
@@ -107,4 +107,8 @@ input::-webkit-inner-spin-button {
   left: 0.3em;
   border-radius: 50%;
   cursor: pointer;
+}
+
+#help-btn:hover {
+  box-shadow: 0 0 0 2px #fff; 
 }
