--- a/styles/common.scss
+++ b/styles/common.scss
@@ -3,6 +3,7 @@
 $background-color: #18453B;
 $font-size: 16px;
 $font-color: #ffffff;
+$calculate-btn-color: #1BFD9C;
 
 body {
   background-color: $background-color;
