Added border for active inputs

--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -42,6 +42,10 @@ input {
   width: 90%;
 }
 
+input:focus {
+  outline-width: 0;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
